# CanvOS

./: .arg  .arg.m  .arg.template  .arg_back  .backportrc.json  .dg-arg  .dockerignore  .earthlyignore  .edge-custom-config.yaml.template  .gitconfig.template  .gitignore  .gitleaksignore  .pre-commit-config.yaml  .variables.env  .variables.env.temp  .variables.env.tmp  .versions.env  Dockerfile  Dockerfile.template  Earthfile  LICENSE  Makefile  OWNERS.md  README.md  build.sh  custom-postreset.yaml  dev-public.json  dg-data  docker-bake-common.hcl  docker-bake-kairosify.hcl  docker-bake.hcl  earthly-cert.sh  earthly-entrypoint.sh  earthly.sh  gitconfig.template  grubmenu.cfg  image.lst  k8s_version.json  keys.sh  menu.sh  (+8 more)
.github/: base-images.yaml
Docker/: Dockerfile.base-image  Dockerfile.iso-image  Dockerfile.stylus-image  Dockerfile.validate-ud  docker-base.hcl
alpine-builder-image/: Dockerfile
base_image/: Dockerfile.opensuse-leap-k3s  Dockerfile.opensuse-leap-kubeadm  Dockerfile.ubuntu-lts-20-rke2  Dockerfile.ubuntu-lts-22-k3s  Dockerfile.ubuntu-lts-22-kubeadm
base_images/: Dockerfile.opensuse-leap-k3s  Dockerfile.opensuse-leap-kubeadm  Dockerfile.opensuse-leap-rke2  Dockerfile.ubuntu  Dockerfile.ubuntu-lts-20-k3s  Dockerfile.ubuntu-lts-20-kubeadm  Dockerfile.ubuntu-lts-22-rke2
cis-harden/: harden.sh
cli/: Dockerfile  go.mod  go.sum  main.go
cloudconfigs/: 50-canvos-net-naming.hwdb  80_canvos_net_naming.yaml  80_stylus_maas.yaml  80_stylus_net_naming.yaml  80_stylus_uki.yaml  cloud-content.sh  (+7 more)
efi-size-check/: Cargo.toml
efi-size-check/src/: main.rs
(+230 files in other folders)
