[package]
name = "efi-size-check"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.21"
uefi = { git = "https://github.com/nianyush/uefi-rs.git", branch = "unchunked" }
uefi-services = { git = "https://github.com/nianyush/uefi-rs.git", branch = "unchunked" }
